--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
-h1 {
-    color: rebeccapurple;
+body, p, h1, h2 ,h3{
+    padding: 0;
+    margin: 0;
+}
+
+.board {
+    border: 1px solid #292929;
+
+    width: 400px;
+    height: 400px;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.board-field{
+    border: 1px solid #292929;
 }
