--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&display=swap');
+
 body, p, h1, h2 ,h3{
+    padding: 0;
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+}
+
+text {
     padding: 0;
     margin: 0;
 }
 
-.board {
-    border: 1px solid #292929;
+body{
+    background-color: #f2f2f2;
+}
 
+h1{
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    padding-top: 32px;
+}
+
+.game-board {
+    position: relative;
+    background-color: #fff;
+    width: 400px;
+    padding: 48px;
+    border-radius: 16px;
+    border: 2px solid #0c0c0c;
+    display: flex;
+    gap: 24px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.display {
+    font-size: 24px;
+    position: absolute;
+    top: 9px;
+}
+
+.board {
+
+    border: 1px solid #0c0c0c;
     width: 400px;
     height: 400px;
 
@@ -15,13 +59,48 @@ body, p, h1, h2 ,h3{
 }
 
 .board-field{
+    position: relative;
     border: 1px solid #292929;
 }
 
-.paint-ball{
-    background-color: red;
+#reset-btn {
+    font-family: inherit;
+    font-weight: 600;
+    color: #fff;
+    background-color: #0c0c0c;
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    padding: 16px 40px;
+    cursor: pointer;
 }
 
-.paint-x {
-    background-color: blue;
+#reset-btn:hover {
+    background-color: #292929;
+}
+
+.paint-ball::after{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: '\d7'; /* X */
+    font-size: 100px; 
+    color: #0c0c0c;
+    line-height: 100px;
+    text-align: center;
+}
+
+.paint-x::after {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: '\03bf'; /* Ball */
+    font-size: 100px; 
+    color: #0c0c0c;
+    line-height: 100px;
+    text-align: center;
 }
